# reasonablypolymorphic.com

./: .gitattributes  .gitignore  ClipIt.hs  Makefile  blagda.agda-lib  clips.json  newlayout.html  resume.html  site.hs  stack.yaml  we-can-solve-this.cabal
books/: .gitignore
clippings/: age-of-em-daily-rituals.txt  ai-to-zombies.txt  atlas-shrugged-ending.txt  believer-lightness-clock.txt  dennet-ikigai.txt  fail-everything-room.txt  feynman-solitude.txt  hpmor-silver-gatto.txt  influence-atlas-shrugged.txt  initial-commit.txt  metaphors-rising-intelligence.txt  misc-diamond-age.txt
css/: prettify-hemisu.css  style.css
docs/: Agda.Builtin.Bool.html  Agda.Builtin.Char.Properties.html  Agda.Builtin.Char.html  Agda.Builtin.Equality.Rewrite.html  Agda.Builtin.Equality.html  Agda.Builtin.Float.html  Agda.Builtin.FromNat.html  Agda.Builtin.FromNeg.html  Agda.Builtin.Int.html  Agda.Builtin.List.html  Agda.Builtin.Maybe.html  Agda.Builtin.Nat.html  Agda.Builtin.Reflection.html  Agda.Builtin.Sigma.html  Agda.Builtin.Strict.html  Agda.Builtin.String.Properties.html  Agda.Builtin.String.html  Agda.Builtin.Unit.html  Agda.Builtin.Word.html  Agda.Primitive.Cubical.html  Agda.Primitive.html  Algebra.Bundles.html  Algebra.Consequences.Base.html  Algebra.Consequences.Propositional.html  Algebra.Consequences.Setoid.html  Algebra.Construct.LiftedChoice.html  Algebra.Construct.NaturalChoice.Base.html  Algebra.Construct.NaturalChoice.Max.html  Algebra.Construct.NaturalChoice.MaxOp.html  Algebra.Construct.NaturalChoice.Min.html  Algebra.Construct.NaturalChoice.MinMaxOp.html  Algebra.Construct.NaturalChoice.MinOp.html  Algebra.Core.html  Algebra.Definitions.RawMagma.html  Algebra.Definitions.RawMonoid.html  Algebra.Definitions.RawSemiring.html  Algebra.Definitions.html  Algebra.Morphism.Definitions.html  Algebra.Morphism.Structures.html  Algebra.Morphism.html  (+215 more)
js/: baseline.js  beeline.min.js
math/: lego.markdown
nginx/: nginx.conf
octo-clip-it/: clip-it.py
posts/: 2011-11-29-the-secret-of-happinesstm.markdown  2012-01-11-autoethics-self-enslavement.markdown  2013-07-08-time-compression.markdown  2013-07-10-polyphasing.markdown  2013-07-23-systematic-upkeep.markdown  2013-07-28-agile-love.markdown  2013-08-09-sad-murder-gandhi.markdown  2013-08-22-not-for-its-own-sake.markdown  2013-08-26-a-lesson-learned.markdown  2013-10-10-say-hi-to-lucy.markdown  2013-10-24-sexy-interviewing.markdown  2013-11-01-nanowrimo.markdown  2013-11-11-eduroam-on-linux.markdown  2013-12-08-nanowrimo-postmortem.markdown  2014-01-10-2013-in-review.markdown  2014-02-10-along-for-the-ride.markdown  2014-03-07-get-the-girl.markdown  2014-03-18-power-word-case-study.markdown  2014-04-01-generalization-as-intelligence-amplification.markdown  2014-04-09-painting-with-paint.markdown  2014-04-20-insatiable-hunger.markdown  2014-05-07-affording-ascendancy.markdown  2014-05-11-chunking-conceptual-legos.markdown  2014-06-01-ethics-crasher.markdown  2014-06-12-riding-the-metabus.markdown  2014-06-27-first-20-recursive-bees.markdown  2014-07-14-introducing-concept-space.markdown  2014-09-18-building-over-the-abyss.markdown  2014-10-22-comfort-zones.markdown  2014-10-29-outside-view.markdown  2014-11-10-scenes.markdown  2015-01-01-2014-postmortem.markdown  2015-01-08-tracking-midterm.markdown  2015-03-03-the-final-exam.markdown  2015-07-02-love-types.markdown  2015-07-07-ideas-and-men.markdown  2015-07-21-sandy-runback.markdown  2015-07-28-hakyll.markdown  2015-07-29-nerd-sniped.markdown  2015-08-13-taylor-swift.markdown  (+13 more)
scripts/: deploy.sh  dump-csv.sh  newpost.sh  publish.sh
site/: Categories.agda
src/: ClipIt.hs  Erdos.hs  Main.hs  Poly.hs  Utils.hs  WCST.hs
templates/: default.html  index.html  nav.html  post.html  tag.html
wip/: .markdown  2015-11-06-letter-to-myself.markdown  2015-12-29-2015-postmortem.markdown  adders-and-arrows.markdown  alphagetti.markdown  datatypes-a-la-carte.markdown  dont-eff-it-up.markdown  eff.markdown  elm-is-wrong.markdown  existential.markdown  free-stories.markdown  frpnow.markdown  government.markdown  higher-kinded-data-2.markdown  higher-kinded-data.markdown  law.html  lighthouses.markdown  map-lifta2.markdown  mfix.markdown  monoids.markdown  navmesh.markdown  preface.markdown  profiler.markdown  protobufs.markdown  reify.markdown  research.markdown  same-same.markdown  solving-lcsa.markdown  symbolic-differentiation.lagda.md  tc.markdown  term-lenses.markdown  type-families.markdown  (+3 more)
(+977 files in other folders)
