name:               we-can-solve-this
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

homepage:           http://sandymaguire.me
license:            BSD3
license-file:       LICENSE
author:             Sandy Maguire
maintainer:         sandy@sandymaguire.me

category:           Web

executable wcst
  main-is:          WCST.hs
  build-depends:    base
                  , hakyll
                  , datetime
                  , parsec
                  , pandoc
                  , strptime
                  , time
                  , containers
                  , filepath
                  , old-locale
                  , regex-compat
                  , time
  ghc-options:      -threaded
  hs-source-dirs:   src
  default-language: Haskell2010

executable poly
  main-is:          Poly.hs
  build-depends:    base
                  , hakyll
                  , datetime
                  , parsec
                  , pandoc
                  , strptime
                  , time
                  , containers
                  , filepath
                  , old-locale
                  , regex-compat
                  , time
  ghc-options:      -threaded
  hs-source-dirs:   src
  default-language: Haskell2010
